[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda_powertools"
version = "0.3.0"
description = "Lambda Powertools is a package encapsulating utilities and best practices used to write Python Lambda functions at Spreaker."
authors = [{ name = "Spreaker" }]
license = { text = "MIT" }
dependencies = [
    "prometheus-client==0.25.0"
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-mock==3.15.1",
]

[tool.setuptools.packages.find]
include = ["lambda_powertools"]

[tool.pytest.ini_options]
pythonpath = "lambda_powertools"
testpaths = [
    "tests"
]
